--- a/VanPhongCongChung/VanPhongCongChung/Web.config
+++ b/VanPhongCongChung/VanPhongCongChung/Web.config
@@ -17,31 +17,22 @@
   </appSettings>
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="~/Admin/Login" timeout="2000"/>
+      <forms loginUrl="~/Login/Index" timeout="2000"/>
     </authentication>
     <membership defaultProvider="CustomMembershipProvider">
       <providers>
-          <add applicationname="VanPhongCongChung" connectionstringname="HOURTHY" 
-               enablepasswordreset="true" maxinvalidpasswordattempts="5" minrequirednonalphanumericcharacters="0"
+        <add applicationname="VanPhongCongChung"
+               connectionstringname="OnlineShopDbContext"
+               enablepasswordreset="true" maxinvalidpasswordattempts="5"
+               minrequirednonalphanumericcharacters="0"
                minrequiredpasswordlength="1" name="CustomMembershipProvider"
                passwordattemptwindow="10" passwordformat="Hashed"
                requiresquestionandanswer="false" requiresuniqueemail="false"
-               type="OnlieShop.Areas.Admin.Code.CustomMembershipProvider">
-          </add>
+               type="VanPhongCongChung.Controllers.CustomMembershipProvider"></add>
       </providers>
     </membership>
-    <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-      </namespaces>
-    </pages>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
